added SQL content

--- a/core_concepts.ipynb
+++ b/core_concepts.ipynb
@@ -7,6 +7,7 @@
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -214,11 +215,11 @@
       "metadata": {
         "id": "RuIJJZgoP5FZ",
         "colab_type": "code",
+        "outputId": "711397f3-b8b0-45a8-c3a7-801b3a2d3c32",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 379
-        },
-        "outputId": "711397f3-b8b0-45a8-c3a7-801b3a2d3c32"
+        }
       },
       "source": [
         "# import numpy as np\n",
@@ -237,7 +238,7 @@
         "plt.ylabel('Probability')\n",
         "plt.show()"
       ],
-      "execution_count": 77,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -271,11 +272,11 @@
       "metadata": {
         "id": "Za-6DC6NHyKH",
         "colab_type": "code",
+        "outputId": "cdcadccd-c974-449d-ea41-c8833f2d076a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 379
-        },
-        "outputId": "cdcadccd-c974-449d-ea41-c8833f2d076a"
+        }
       },
       "source": [
         "x = np.random.normal(10, 3, 10000)\n",
@@ -287,7 +288,7 @@
         "plt.ylabel('Probability')\n",
         "plt.show()"
       ],
-      "execution_count": 62,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -321,11 +322,11 @@
       "metadata": {
         "id": "SAF7Kqjjr5H-",
         "colab_type": "code",
+        "outputId": "9dbb330c-da83-440f-c946-89a8f28c9d9a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 379
-        },
-        "outputId": "9dbb330c-da83-440f-c946-89a8f28c9d9a"
+        }
       },
       "source": [
         "#import seaborn as sns\n",
@@ -355,7 +356,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 63,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -396,11 +397,11 @@
       "metadata": {
         "id": "zIPQ3M2wKG7A",
         "colab_type": "code",
+        "outputId": "0b65abbf-dad9-4b8d-c646-171f9a8157f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 365
-        },
-        "outputId": "0b65abbf-dad9-4b8d-c646-171f9a8157f7"
+        }
       },
       "source": [
         "import numpy as np\n",
@@ -412,7 +413,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -468,11 +469,11 @@
       "metadata": {
         "id": "edJOYQ3b8RXB",
         "colab_type": "code",
+        "outputId": "417675f2-c44d-471e-f631-bb8d42b8ff0b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 334
-        },
-        "outputId": "417675f2-c44d-471e-f631-bb8d42b8ff0b"
+        }
       },
       "source": [
         "from scipy.stats import binom\n",
@@ -490,7 +491,7 @@
         "plt.title('Binomial Distribution', fontsize=16)\n",
         "plt.show()"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -534,11 +535,11 @@
       "metadata": {
         "id": "xaSNHl-R_00M",
         "colab_type": "code",
+        "outputId": "88205f02-5129-4651-9f50-e2c3e8171e85",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 348
-        },
-        "outputId": "88205f02-5129-4651-9f50-e2c3e8171e85"
+        }
       },
       "source": [
         "from scipy.stats import nbinom\n",
@@ -557,7 +558,7 @@
         "plt.xlabel('Number of \"successes\" before achieving n failures')\n",
         "plt.show()"
       ],
-      "execution_count": 68,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -594,11 +595,11 @@
       "metadata": {
         "id": "41zJZzAUubDr",
         "colab_type": "code",
+        "outputId": "640e20d6-507e-4eda-a4b9-31f9bb2f0834",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 348
-        },
-        "outputId": "640e20d6-507e-4eda-a4b9-31f9bb2f0834"
+        }
       },
       "source": [
         "def geometric_dist(y,p):\n",
@@ -627,7 +628,7 @@
         "plt.xlabel('Number of \"successes\" before achieving n failures')\n",
         "plt.show()"
       ],
-      "execution_count": 70,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -678,11 +679,11 @@
       "metadata": {
         "id": "fGKmUuxnSZy6",
         "colab_type": "code",
+        "outputId": "9f839113-eb99-4652-bc7e-198da7deac33",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 379
-        },
-        "outputId": "9f839113-eb99-4652-bc7e-198da7deac33"
+        }
       },
       "source": [
         "from scipy.stats import expon\n",
@@ -696,7 +697,7 @@
         "plt.legend(fontsize='large')\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -717,11 +718,11 @@
       "metadata": {
         "id": "n6kPuKIjdB6m",
         "colab_type": "code",
+        "outputId": "b067cda9-eda7-42fe-f8f4-9f32a28bb5b2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 379
-        },
-        "outputId": "b067cda9-eda7-42fe-f8f4-9f32a28bb5b2"
+        }
       },
       "source": [
         "x = np.arange(0, 10, 0.001)\n",
@@ -734,7 +735,7 @@
         "plt.legend(fontsize='large')\n",
         "plt.show()"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -779,11 +780,11 @@
       "metadata": {
         "id": "w404FVIyVus-",
         "colab_type": "code",
+        "outputId": "a8e63878-fac7-4013-dd32-cab89763088d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 365
-        },
-        "outputId": "a8e63878-fac7-4013-dd32-cab89763088d"
+        }
       },
       "source": [
         "from scipy.stats import poisson\n",
@@ -795,7 +796,7 @@
         "plt.title('Poisson Distribution', fontsize=16)\n",
         "plt.show()"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -835,11 +836,11 @@
       "metadata": {
         "id": "uMSEU6H2NhCd",
         "colab_type": "code",
+        "outputId": "a07e49f7-5445-4ff8-e16f-ebf711f3ac35",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 365
-        },
-        "outputId": "a07e49f7-5445-4ff8-e16f-ebf711f3ac35"
+        }
       },
       "source": [
         "import seaborn as sns\n",
@@ -850,7 +851,7 @@
         "plt.title('Normal/Gaussian Distribution', fontsize=16)\n",
         "plt.show()"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -881,11 +882,11 @@
       "metadata": {
         "id": "vYPHFysQaLuv",
         "colab_type": "code",
+        "outputId": "957e5972-7473-4764-8894-47addf09dc81",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 387
-        },
-        "outputId": "957e5972-7473-4764-8894-47addf09dc81"
+        }
       },
       "source": [
         "vals = np.random.normal(50, 12, 10000)\n",
@@ -906,7 +907,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1401,7 +1402,16 @@
         "colab_type": "text"
       },
       "source": [
-        "## Gradient Descent"
+        "## Gradient Descent\n",
+        "\n",
+        "**Cost Function**\n",
+        "\n",
+        "**Step Size**\n",
+        "\n",
+        "**Determining Gradient**\n",
+        "\n",
+        "_The gradient of a function is determined by calculating the partial derivative with respect to each variable in the function._\n",
+        "\n"
       ]
     },
     {
@@ -1414,7 +1424,7 @@
         "## Dimensionality Reduction\n",
         "\n",
         "**Purpose** - to reduce the number of dimensions of the data for the algorithm to model while maintaining as much of the variance in the data as possible\n",
-        "* Curse of Dimensionality - On the one hand, more features allow one to account for additional influences to account for variance and nuances required to accurately model a given machine learning model. On the other hand, as the number of dimensions increases, the accompanying volume of the hyperspace explodes exponentially. As such, the potential amount of information required to accurately model such space become increasingly complex.\n",
+        "* Curse of Dimensionality - On the one hand, more features allow one to account for additional influences to better capture the  variance and nuances required to accurately model a given set of data. On the other hand, as the number of dimensions (features) increases, the accompanying volume of the hyperspace explodes exponentially. As such, the potential amount of information required to accurately model such space become increasingly complex.\n",
         "* Points in n-dimensional space become increasingly sparse as the number of dimensions increases\n",
         "  * As dimensionality grows, there are fewer oberservations per region\n",
         "  * Large space between individual data points makes it hard for the algorithm to find relationships\n",
@@ -2181,7 +2191,116 @@
         "colab_type": "text"
       },
       "source": [
-        "# Core Concepts - SQL"
+        "# Core Concepts - SQL\n",
+        "\n",
+        "**Basic Setup for Jupyter Notebook**\n",
+        "\n",
+        "```python\n",
+        "import sqlite3\n",
+        "```\n",
+        "```python\n",
+        "# create a connection to a database\n",
+        "connection = sqlite3.connect(\"name_of_database_file\")\n",
+        "```\n",
+        "```python\n",
+        "# create a cursor to execute commands\n",
+        "cursor = connection.cursor()\n",
+        "```\n",
+        "```python\n",
+        "# execute a query and then return results\n",
+        "sql_return = cursor.execute('''SQL query statement;''').fetchall()\n",
+        "```\n",
+        "Or\n",
+        "```python\n",
+        "sql_return.fetchall()\n",
+        "```\n",
+        "\n",
+        "**Basic Query Commands**\n",
+        "\n",
+        "```SELECT``` Statement - query data from specified columns\n",
+        "\n",
+        "* General Structure:\n",
+        "\n",
+        "```python\n",
+        "\"\"\"SELECT col_1, col_2, col_3 FROM table_name MODIFIER/CONDITIONAL CLAUSE optional;\"\"\"\n",
+        "```\n",
+        "  * The ```*``` is a special symbol meaning \"all/everything\"\n",
+        "  * Aliases - assign aliases to table names when selecting from (or joining) multiple tables\n",
+        "  \n",
+        "```python\n",
+        "\"\"\"SELECT a.col_1, b.col_2, c.col_3 FROM table_A a, table_B b, table_C c MODIFIER/CONDITIONAL CLAUSE optional;\"\"\"\n",
+        "```\n",
+        " \n",
+        "**Aggregating, Ordering, and Filtering Queries**\n",
+        "\n",
+        "1. ```ORDER BY``` - order the data returned from a query based on the contents of a particular column\n",
+        "\n",
+        "  * General Structure:\n",
+        "  \n",
+        "```python\n",
+        "\"\"\"SELECT col_1, col_2, col_3 FROM table_name ORDER BY col_name ASC | DESC;\"\"\" \n",
+        "```\n",
+        "    * Can indicate whether the returned data should be ascending or descending order $\\to$ default is ascending\n",
+        "    \n",
+        "2. ```LIMIT``` - specify the number of results returned from a query\n",
+        "  * General Structure:\n",
+        "  \n",
+        "```python\n",
+        "\"\"\"SELECT col_1, col_2, col_3 FROM table_name CONDITIONAL CLAUSE optional LIMIT 5;\"\"\"\n",
+        "```\n",
+        "  * Can also use ```.fetchone()``` to return the first result from the query\n",
+        "  \n",
+        "3. ```BETWEEN``` - return data from a query where the values are between a specfied range\n",
+        "\n",
+        "  * General Structure:\n",
+        "  \n",
+        "```python\n",
+        "\"\"\"SELECT col_1, col_2, col_3 FROM table_name CONDITIONAL CLAUSE optional BETWEEN val_1 AND val_2;\"\"\"\n",
+        "```\n",
+        "\n",
+        "4. ```COUNT``` - return a count of the number of records that meet the specified condition\n",
+        "\n",
+        "  * General Structure:\n",
+        "  \n",
+        "```python\n",
+        "\"\"\"SELECT col_1, col_2, col_3 COUNT (col_name) FROM table_name CONDITIONAL CLAUSE mandatory;\"\"\"\n",
+        "```\n",
+        "  * Other aggregating functions include:\n",
+        "    * ```MAX()``` - return the max value\n",
+        "    * ```MIN()``` - return the minumum value\n",
+        "    * ```SUM()``` - return the sum total value\n",
+        "    * ```AVG()``` - return the mean value\n",
+        "\n",
+        "5. ```GROUP BY``` - group the results of a query by a specified column\n",
+        "\n",
+        "  * General Structure:\n",
+        "  \n",
+        "```python\n",
+        "\"\"\"SELECT col_1, col_2, col_3 FUNCTION (col_name) FROM table_name GROUP BY col_name2;\"\"\"\n",
+        "```\n",
+        "  * Can group by multiple columns\n",
+        "  \n",
+        "6. ```WHERE``` clause - return query results that meet the specified condition\n",
+        "\n",
+        "  * General Structure:\n",
+        "  \n",
+        "```python\n",
+        "\"\"\"SELECT col_1, col_2, col_3 FROM table_name WHERE col_name >= value;\"\"\"\n",
+        "```\n",
+        "\n",
+        "7. ```HAVING``` clause - filter query results after the ```GROUP BY``` function has been performed\n",
+        "  * Allows for conditional clauses to be placed on the results from an aggregated query\n",
+        "  * General Structure:\n",
+        "  \n",
+        "```python\n",
+        "\"\"\"SELECT col_1, col_2, col_3 FUNCTION (col_name) FROM table_name GROUP BY col_name2 HAVING FUNCTION (col_name) < value;\"\"\"\n",
+        "```\n",
+        "  * Can combine the ```WHERE``` and ```HAVING``` clauses\n",
+        "\n",
+        "```python\n",
+        "\"\"\"SELECT col_1, col_2, col_3 FUNCTION (col_name) FROM table_name WHERE col_name > value GROUP BY col_name2 HAVING FUNCTION(col_name) <= value2;\"\"\"\n",
+        "```\n",
+        "\n"
       ]
     },
     {
