--- a/core_concepts.ipynb
+++ b/core_concepts.ipynb
@@ -2259,17 +2259,17 @@
         "```\n",
         "\n",
         "4. ```COUNT``` - return a count of the number of records that meet the specified condition\n",
-        "\n",
-        "  * General Structure:\n",
-        "  \n",
-        "```python\n",
-        "\"\"\"SELECT col_1, col_2, col_3 COUNT (col_name) FROM table_name CONDITIONAL CLAUSE mandatory;\"\"\"\n",
-        "```\n",
         "  * Other aggregating functions include:\n",
         "    * ```MAX()``` - return the max value\n",
         "    * ```MIN()``` - return the minumum value\n",
         "    * ```SUM()``` - return the sum total value\n",
         "    * ```AVG()``` - return the mean value\n",
+        "  * General Structure:\n",
+        "  \n",
+        "```python\n",
+        "\"\"\"SELECT col_1, col_2, col_3 FUNCTION (col_name) FROM table_name CONDITIONAL CLAUSE mandatory;\"\"\"\n",
+        "```\n",
+        "\n",
         "\n",
         "5. ```GROUP BY``` - group the results of a query by a specified column\n",
         "\n",
@@ -2300,6 +2300,34 @@
         "```python\n",
         "\"\"\"SELECT col_1, col_2, col_3 FUNCTION (col_name) FROM table_name WHERE col_name > value GROUP BY col_name2 HAVING FUNCTION(col_name) <= value2;\"\"\"\n",
         "```\n",
+        "\n",
+        "**JOIN Statements**\n",
+        "\n",
+        "1. Types of joins:\n",
+        "  * ```LEFT JOIN``` - resulting table includes all of the data from the first table listed and only the data from the second table listed that matches the key of the first table\n",
+        "  * ```RIGHT JOIN``` - resulting tables includes all of the data from the second table listed and only the data from the first table listed that matches the key of the second table\n",
+        "  * ```INNER JOIN``` - resulting table includes only the data that matches the keys from both tables; the intersection of two tables\n",
+        "  * ```OUTER JOIN``` - all data from both tables\n",
+        "\n",
+        "<p align=\"center\">\n",
+        "<img src=\"https://i.stack.imgur.com/66zgg.png\" height=400>\n",
+        "</p>\n",
+        "\n",
+        "2. Statement Format:\n",
+        "\n",
+        "```python\n",
+        "\"\"\"SELECT * FROM table_A a JOIN table_B b ON a.col_name = b.col_name;\"\"\"\n",
+        "```\n",
+        "\n",
+        "or\n",
+        "\n",
+        "```python\n",
+        "\"\"\"SELECT * from table_A JOIN table_B USING (col_name);\"\"\"\n",
+        "```\n",
+        "\n",
+        "* NOTE: ```JOIN``` statements can include aggregating, ordering, and filtering\n",
+        "\n",
+        "\n",
         "\n"
       ]
     },
