--- a/Activation_functions.ipynb
+++ b/Activation_functions.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "Activation_functions.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -69,7 +71,10 @@
         "  * Update the values for the weights and biases\n",
         "    * $w_{\\text{updated}} = w - \\alpha * dw$\n",
         "    * $b_{\\text{updated}} = w - \\alpha * db$\n",
-        "    * $\\alpha$ is the learning rate (a tunable parameter)"
+        "    * $\\alpha$ is the learning rate (a tunable parameter)\n",
+        "    \n",
+        "    \n",
+        "I highly recommend looking at [TensorFlow Playground](https://playground.tensorflow.org/#activation=tanh&batchSize=10&dataset=circle&regDataset=reg-plane&learningRate=0.03&regularizationRate=0&noise=0&networkShape=4,2&seed=0.91468&showTestData=false&discretize=false&percTrainData=50&x=true&y=true&xTimesY=false&xSquared=false&ySquared=false&cosX=false&sinX=false&cosY=false&sinY=false&collectStats=false&problem=classification&initZero=false&hideText=false) to help build an intuition for how a neural network \"learns\" a classification task"
       ]
     },
     {
@@ -103,11 +108,11 @@
       "metadata": {
         "id": "f4N5SEWmKuhG",
         "colab_type": "code",
+        "outputId": "7d37ab81-2d67-4955-86b6-776061aa2ebd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 386
-        },
-        "outputId": "4a5eb0bd-4296-4dad-89c3-7ffeb2e9fc90"
+        }
       },
       "source": [
         "import numpy as np\n",
@@ -135,7 +140,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -168,11 +173,11 @@
       "metadata": {
         "id": "bPPmAsm2NarU",
         "colab_type": "code",
+        "outputId": "e77aa5db-f910-45bd-a4e3-505b13a21615",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 386
-        },
-        "outputId": "e77aa5db-f910-45bd-a4e3-505b13a21615"
+        }
       },
       "source": [
         "def tanh(x, derivative=False):\n",
@@ -195,7 +200,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -228,11 +233,11 @@
       "metadata": {
         "id": "dNAG3NYzSLTM",
         "colab_type": "code",
+        "outputId": "f322dfde-d353-4fff-adc0-20850d8d1a5f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 386
-        },
-        "outputId": "f322dfde-d353-4fff-adc0-20850d8d1a5f"
+        }
       },
       "source": [
         "def arctan(x, derivative=False):\n",
@@ -252,7 +257,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -285,11 +290,11 @@
       "metadata": {
         "id": "aphZZgw2UDEk",
         "colab_type": "code",
+        "outputId": "144859f9-e47f-4809-9bb0-df5339258007",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 386
-        },
-        "outputId": "144859f9-e47f-4809-9bb0-df5339258007"
+        }
       },
       "source": [
         "def relu(x, derivative=False):\n",
@@ -322,7 +327,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -355,11 +360,11 @@
       "metadata": {
         "id": "EqO1XpgyVa5b",
         "colab_type": "code",
+        "outputId": "c4d6737f-854a-4f29-d891-cb4701767113",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 386
-        },
-        "outputId": "c4d6737f-854a-4f29-d891-cb4701767113"
+        }
       },
       "source": [
         "# the default leakage here is 0.05!\n",
@@ -393,7 +398,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -426,6 +431,59 @@
       "cell_type": "code",
       "metadata": {
         "id": "KlSwGwT2WJr9",
+        "colab_type": "code",
+        "outputId": "e5a01a7c-1fa9-421f-a08f-75c8ef895dba",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "def softmax (inputs):\n",
+        "  return np.exp(inputs) / (np.sum(np.exp(inputs)))\n",
+        "\n",
+        "softmax([2,1,0.1])"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.65900114, 0.24243297, 0.09856589])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LC3TJPDDfjmH",
+        "colab_type": "text"
+      },
+      "source": [
+        "<p align=\"center\">\n",
+        "  <img src=\"https://miro.medium.com/max/1228/1*l6GNTFihUu0EuUMUGHMwpA.png\">\n",
+        "  </p>\n",
+        "\n",
+        "<p align=\"center\">\n",
+        "<img src=\"https://deepnotes.io/public/images/softmax.png\">\n",
+        "</p>\n",
+        "\n",
+        "<p align=\"center\">\n",
+        "<img src=\"https://lichtphyz.github.io/images/SoftMax%20Desmos.png\" width=\"450\">\n",
+        "</p>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vKIdmAudmAeK",
         "colab_type": "code",
         "colab": {}
       },
