grammatical/spelling corrections

--- a/Activation_functions.ipynb
+++ b/Activation_functions.ipynb
@@ -163,9 +163,9 @@
         "colab_type": "text"
       },
       "source": [
-        "2. Hyperbolic Tangent (tanh) Activation Function - similar to sigmoid function, but typically used in hidden layers for binary classification tasks\n",
-        "  * **Pros:** Outputs values between -1 and 1, which centers data around zero, which makes optimization easier. \n",
-        "  * **Cons:** The derivative of the tanh activation function still eventually approaches zero, and therefore slows down learning. Also, the function flattens out happens quicker than the sigmoid function, thus learning slows down quicker."
+        "2. Hyperbolic Tangent (tanh) Function - similar to sigmoid function, but typically used in hidden layers for binary classification tasks\n",
+        "  * **Pros:** Outputs values between -1 and 1, which centers data around zero and makes optimization easier. \n",
+        "  * **Cons:** The derivative of the tanh activation function still eventually approaches zero, and therefore slows down learning. Also, the function flattens out quicker than the sigmoid function, thus learning slows down quicker."
       ]
     },
     {
@@ -223,7 +223,7 @@
         "colab_type": "text"
       },
       "source": [
-        "3. Inverse Tangent (arctan) Activation Function - Similar qualities as tanh, but attempts to overcome the vanishing gradient issue by smoothing the curve into the asymtotic plateaus\n",
+        "3. Inverse Tangent (arctan) Function - Similar qualities as tanh, but attempts to overcome the vanishing gradient issue by smoothing the curve into the asymtotic plateaus\n",
         "  * **Pros:** Outputs values between $-\\frac{\\pi}{2}$ and $\\frac{\\pi}{2}$, so again the data is centered around zero making optimization easier. Also, takes longer to flatten out $\\to$ makes learning more efficient\n",
         "  * **Cons:** Calculating the derviative of arctan is more computationally expensive"
       ]
@@ -352,7 +352,7 @@
       "source": [
         "5. Leaky ReLU - variant of ReLU that attemps to resolve the dead gradient problem by allowing a small, non-zero, constant gradient α (normally, α=0.01) for z < 0\n",
         "  * **Pros:** The small slope for negative values allows for continuous gradient based learning as the derivative is never zero\n",
-        "  * **Cons:** Because it possess linearity, it can not be used for complex classification tasks $\\to$ need to check if true"
+        "  * **Cons:** Because it possess linearity, it can not be used for complex classification tasks $\\to$ source? need to check if this is true"
       ]
     },
     {
@@ -423,7 +423,7 @@
       "source": [
         "6. SoftMax - calculate the probabilities of each target class over all possible target classes\n",
         "\n",
-        "  * Converts the input of the neuron into the range of 0 and 1 in such a way that the total sum of the outputs is equal to 1 where the value of the output represents the probability of the input belonging to each class\n",
+        "  * Converts the input of the neuron into the range of 0 and 1 in such a way that the total sum of the outputs is equal to 1 and where the value of the output represents the probability of the input belonging to each class\n",
         "  * Typically used in the output layer of a multiclassification task"
       ]
     },
